# biocypher-cbioportal

./: .$model.drawio.bkp  .gitignore  LICENSE  README.md  api_docs.json  create_knowledge_graph.py  docker-compose.yml  docker-variables.env  get_api_data.py  mermaid_diagram.py  model.drawio  pyproject.toml
cbioportal/adapters/: cbioportal_adapter.py  edge_field_classes.py  node_field_classes.py
config/: biocypher_config.yaml  biocypher_docker_config.yaml  schema_config.yaml
docker/: biocypher_entrypoint_patch.sh  create_table.sh  import.sh
scripts/: build.sh  import.sh
template_package/adapters/: example_adapter.py
